RESOLVED FIXED53125
[GTK] LayoutTests/media/audio-mpeg4-supported.html fails
https://bugs.webkit.org/show_bug.cgi?id=53125
Summary [GTK] LayoutTests/media/audio-mpeg4-supported.html fails
Jer Noble
Reported 2011-01-25 14:10:59 PST
It has been suggested that the cause of the failure is that the necessary (non free) codecs are not installed on the build bots. Test added in: http://trac.webkit.org/changeset/76621 Original bug: https://bugs.webkit.org/show_bug.cgi?id=52467
Attachments
proposed patch (3.30 KB, patch)
2011-01-26 05:34 PST, Philippe Normand
no flags
updated patch (4.12 KB, patch)
2011-01-27 03:48 PST, Philippe Normand
mrobinson: review+
Jer Noble
Comment 1 2011-01-25 14:23:52 PST
Test added to LayoutTests/platform/gtk/Skipped in: https://trac.webkit.org/changeset/76640
Philippe Normand
Comment 2 2011-01-26 05:34:21 PST
Created attachment 80188 [details] proposed patch
Philippe Normand
Comment 3 2011-01-26 05:37:44 PST
The codecs are installed on the buildbots (gst-ffmpeg), the issue is just that the GStreamer player didn't handle the audio/x-m4a mimetype correctly.
Martin Robinson
Comment 4 2011-01-26 09:18:11 PST
Comment on attachment 80188 [details] proposed patch Thanks for the quick fix!
Philippe Normand
Comment 5 2011-01-27 00:56:13 PST
Philippe Normand
Comment 6 2011-01-27 02:01:54 PST
Will send a new patch as the first one broke some tests, sorry :(
Philippe Normand
Comment 7 2011-01-27 03:48:23 PST
Created attachment 80315 [details] updated patch
Philippe Normand
Comment 8 2011-02-03 06:17:06 PST
Ping? Martin? :)
Philippe Normand
Comment 9 2011-02-03 08:30:48 PST
WebKit Review Bot
Comment 10 2011-02-03 12:05:58 PST
http://trac.webkit.org/changeset/77494 might have broken GTK Linux 32-bit Debug
Note You need to log in before you can comment on or make changes to this bug.