2011-01-26  Philippe Normand  <pnormand@igalia.com>

Reviewed by Martin Robinson.

        [GTK] LayoutTests/media/audio-mpeg4-supported.html fails
        https://bugs.webkit.org/show_bug.cgi?id=53125

        * platform/graphics/gstreamer/MediaPlayerPrivateGStreamer.cpp:
        (WebCore::mimeTypeCache): Add audio/x-m4a mimetype in the cache.

2011-01-26  Philippe Normand  <pnormand@igalia.com>

        Reviewed by Martin Robinson.

        [GTK] LayoutTests/media/audio-mpeg4-supported.html fails
        https://bugs.webkit.org/show_bug.cgi?id=53125

        * platform/gtk/Skipped: Unskip fixed test.

Canonical link: https://commits.webkit.org/66991@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@76773 268f45cc-cd09-0410-ab3c-d52691b4dbfc